<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">SoftInput</string>
    <string name="language_cn">繁體</string>
    <string name="language_en">English</string>
    <string name="setting_language">Select Language</string>
    <string name="title_login">Login</string>
    <string name="home">Home</string>
    <string name="fragment_title_news">News</string>
    <string name="tutorials">Tutorials</string>
    <string name="security_tips">Security Tips</string>
    <string name="contact_us">Contact Us</string>
    <string name="setting">Setting</string>
    <string name="fragment_title_personal_account">Personal Account</string>
    <string name="fragment_title_trustee_contact">Trustee Contact</string>
    <string name="fragment_title_message_box">Message Box</string>
    <string name="fragment_title_personal_profile">Personal Profile</string>
    <string name="member_login">Member Login</string>
    <string name="new_registration">New Registration</string>
    <string name="about_empf">About eMPF</string>
    <string name="latest_news">Latest News</string>
    <string name="hi">Hi!</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="de_registration">De-registration</string>
    <string name="account_de_registration"><u>Account De-Registration</u></string>
    <string name="closed_account">Closed Account</string>
    <string name="account_de_registration_notice">CAUTION! Once you press the \"Confirm\" button, your eMPF account will be completely and immediately deleted from the system If you want to register our service again, you must follow and complete the whole registration process.</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="skip">Skip</string>
    <string name="last_login_attempt">Last Login Attempt</string>
    <string name="last_login_status">Last Login Status</string>
    <string name="first_login">First Login</string>
    <string name="registration">Registration</string>
    <string name="login_id">Login ID</string>
    <string name="account_name">Account Name</string>
    <string name="one_time_password">One Time Password</string>
    <string name="invalid_one_time_password">Invalid One Time Password</string>
    <string name="one_time_password_expired">Password Expired</string>
    <string name="generate_new_password">Generate A New Password</string>
    <string name="one_time_password_has_been_sent">One Time Password has been sent to your register email address.</string>
    <string name="one_time_password_input_notice">Please input one time password which is sent by MPFA to your register email address for login.</string>
    <string name="second_password_input_notice">For illustration, if your 2nd password is 1A2B3C4D5E, You will need to key in 3rd,5th and last digit, i.e. 2, 3 and E</string>
    <string name="second_password">Second Password</string>
    <string name="login_id_desc">Login ID must be unique and can be only set once.</string>
    <string name="account_name_desc">Account Name must be unique and can be only set once.</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="enforce_password">Enforce Password</string>
    <string name="enforce_password_desc">Password require 3 combinations of (1) capital letters; (2) small letters; (3) digits.</string>
    <string name="mandatory_field">* is a mandatory field</string>
    <string name="enter_new_first_password">First Password*</string>
    <string name="enter_new_first_password1">First Password</string>
    <string name="enter_new_password">Enter Password*</string>
    <string name="enter_new_second_password">Second Password*</string>
    <string name="enter_new_second_password1">Second Password</string>
    <string name="re_enter_first_password">Re-enter First Password*</string>
    <string name="re_enter_first_password1">Re-enter First Password</string>
    <string name="re_enter_password">Re-enter Password*</string>
    <string name="re_enter_new_second_password">Re-enter Second Password*</string>
    <string name="re_enter_new_second_password1">Re-enter Second Password</string>
    <string name="security_question">Security Question</string>
    <string name="security_question_desc">Security Question for resetting password, please select the question and enter an answer.</string>
    <string name="select_question1">Select Question 1</string>
    <string name="select_question2">Select Question 2</string>
    <string name="select_question3">Select Question 3</string>
    <string name="question1">Question 1</string>
    <string name="question2">Question 2</string>
    <string name="question3">Question 3</string>
    <string name="answer">Answer</string>
    <string name="email_notification">Email Notification</string>
    <string name="email_notification_desc">I would like change the subscribed email notification</string>
    <string name="email_notification_desc1">I would like change the subscribed email notification for the following</string>
    <string name="personal_account_email">Personal Account Email</string>
    <string name="personal_account_email_desc">When the number of personal account(s) held by me increase/decrease</string>
    <string name="corporate_publicity">Corporate Publicity</string>
    <string name="corporate_publicity_desc">Corporate publicity materials of the MPFA</string>
    <string name="email_language">Email Language</string>
    <string name="accept_and_continue">Accept and Continue</string>
    <string name="agree">Agree</string>
    <string name="cancel">Cancel</string>
    <string name="introduce_agreement">Introductory And Agreement</string>
        <string name="introduce_agreement_desc">[Introduction]
    Lorem ipsum dolor sit amet, consectetur
    adipiscing elit. Aenean congue ornare
    congue. Aliquam tincidunt hendrerit.</string>
    <string name="new_registration_reminder">New Registration Reminder</string>
    <string name="step1">Step1</string>
    <string name="step2">Step2</string>
    <string name="step3">Step3</string>
    <string name="step4">Step4</string>
    <string name="online_registration">Online Registration</string>
    <string name="confirm_identity_in_mpfa">Confirm Identity in MPFA</string>
    <string name="login_password">Login Password</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="exit_app">Exit App</string>
    <string name="registration_form">Registration Form</string>
        <string name="registration_form_desc">The name provided below must be same
    as HKID card for identification purpose.</string>
    <string name="surname_en">Surname in English*</string>
    <string name="otaher_name_en">Other names in English*</string>
    <string name="surname_cn">Surname in Chinese</string>
    <string name="other_name_cn">Other names in Chinese</string>
    <string name="hkid_card_num">HKID Card Number*</string>
    <string name="hkid_card_num1">HKID Card Number</string>
        <string name="hkid_input_eg">e.g input A1234567 if HKID card number is
    A123456(7).</string>
    <string name="email_address">Email Address*</string>
    <string name="email_address1">Email Address</string>
    <string name="re_email_address">Re-Enter Email Address*</string>
    <string name="contact_num">Contact Number</string>
    <string name="sum_of_money">sum of money</string>
        <string name="phonenum_out_hk_eg">When your contact number is outside
    Hong Kong, put the country code within the brackets. i.e. (86) 12345678901 for
    the contact number in Mainland</string>
    <string name="reset">Reset</string>
    <string name="submit">Submit</string>
    <string name="confirmation">Confirmation</string>
    <string name="confirm">Confirm</string>
    <string name="completion">Completion</string>
    <string name="print_screen">Print Screen</string>
    <string name="back_to_home">Back to Home</string>
    <string name="signup_confirmation_agree_desc">I agree the above personal information for MPFA member registration record.</string>
        <string name="agree_to_registration_procedures">I had read, understood and agreed to the above registration procedures,Terms of Use Condition, Personal Information Collection Statement and
    the Privacy Policy Statement.</string>
    <string name="signup_confirmation_en_name">English Name:</string>
    <string name="signup_confirmation_cn_name">Chinese Name:</string>
    <string name="signup_confirmation_surname">Surname</string>
    <string name="signup_confirmation_othername">Other Name</string>
    <string name="signup_confirmation_hkid_cardnumber">HKID Card Number:</string>
    <string name="signup_confirmation_hkid_email_addr">Email Address:</string>
    <string name="signup_confirmation_hkid_contact_number">Contact Number:</string>
    <string name="signup_completion_desc">Your online registration is completed.</string>
    <string name="signup_regstration_reference_label">Your Registration Reference Number</string>
        <string name="registration_completion_note">Please present the above Registration Reference Number and your HKID card to our office to activate your account on or
    after 3 business days, with public holidays excluded.</string>
    <string name="forgot_pwd_input_desc">Please input “Login ID / Account Name” and your email registered with MPFA.</string>
    <string name="hkid_or_account_name">Login ID/Account Name</string>
    <string name="registered_email">Registered Email</string>
    <string name="forgot_pwd_confirmation_desc">Please answer the security question. A new password will be sent to your email shortly.</string>
    <string name="forgot_pwd_select_question">Select Question</string>
    <string name="hotline">Hotline</string>
    <string name="hotline_label">Hotline No.:</string>
    <string name="hotline_interactive_enquiry_service">Hotline(24-hour Interactive Enquiry Service)</string>
    <string name="hotline_service_desc">You may contact our officers through the MPFA hotline during office hours from 8:45am to 5:45pm, Monday to Friday (except public holidays).</string>
    <string name="mail_service_desc">You may send your enquiries and comments to us in writing by mail, fax or e-mail.</string>
    <string name="label_mail_fox_email">Mail / Fax / E-mail</string>
    <string name="call">Call</string>
    <string name="address">Address</string>
    <string name="address_label">Address:</string>
    <string name="mailing_address">Mailing Address:</string>
    <string name="fax_no">Fax No.:</string>
    <string name="email">E-mail:</string>
    <string name="personal_profile_en_name">English Name</string>
    <string name="personal_profile_cn_name">Chinese Name</string>
    <string name="personal_profile_hkid_cardnumber">HKID Card Number</string>
    <string name="personal_profile_email_addr">Email Address</string>
    <string name="personal_profile_contact_number">Contact Number</string>
    <string name="personal_profile_1st_password_phase1">Password</string>
    <string name="personal_profile_1st_password">1<sup><small>st</small></sup> Password</string>
    <string name="personal_profile_2nd_password">2<sup><small>nd</small></sup> Password</string>
    <string name="personal_profile_user_id">User ID</string>
    <string name="personal_profile_security_question">Security Question</string>
    <string name="personal_profile_security_question_desc">Security Question for resetting password.Please select the question and enter an answer for each question. Answers are not case sensitive(caps on OR off are OK)</string>
    <string name="please_input_surname_en">Please input Surname in English.</string>
    <string name="please_input_othername_en">Please input Other name in English.</string>
</resources>