<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mpfa_white"
    android:scrollbars="none">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/mpfa_white">

        <FrameLayout
            android:id="@id/first_login_navigator_step2"
            android:layout_width="match_parent"
            android:layout_height="48dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@mipmap/progress_bar_first_login_02" />

            <TextView
                android:id="@id/tv_first_login_step2_navigator_title"
                style="@style/CommFontSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="70dp"
                android:text="@string/enforce_password"
                android:textColor="@color/play_white" />
        </FrameLayout>

        <LinearLayout
            android:id="@id/ll_first_login_step2_pwds_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/first_login_navigator_step2"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="vertical">

            <TextView
                style="@style/MPFATitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/enforce_password"
                android:textColor="@color/mpfa_title_color_orange"
                android:textStyle="bold" />

            <TextView
                style="@style/CommFontSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/enforce_password_desc" />

            <TextView
                style="@style/CommFontSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/mandatory_field"
                android:textColor="@color/mpfa_title_color_orange" />

            <EditText
                android:id="@id/et_new_first_password"
                style="@style/EditTextPassword"
                android:layout_marginTop="16dp"
                android:hint="@string/enter_new_first_password"
                android:maxLength="30" />

            <TextView
                android:id="@id/tv_first_pwd_error_info"
                style="@style/CommFontSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:textColor="@color/mpfa_error"
                android:visibility="gone" />

            <EditText
                android:id="@id/et_re_new_first_password"
                style="@style/EditTextPassword"
                android:layout_marginTop="16dp"
                android:hint="@string/re_enter_first_password"
                android:maxLength="30" />

            <TextView
                android:id="@id/tv_re_first_pwd_error_info"
                style="@style/CommFontSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:textColor="@color/mpfa_error"
                android:visibility="gone" />

            <TextView
                android:id="@id/tv_error_info_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="Error info"
                android:textColor="@color/mpfa_error"
                android:visibility="gone" />

            <EditText
                android:id="@id/et_new_second_password"
                style="@style/EditTextPassword"
                android:layout_marginTop="16dp"
                android:hint="@string/enter_new_second_password"
                android:maxLength="30"
                android:visibility="invisible" />

            <TextView
                android:id="@id/tv_second_pwd_error_info"
                style="@style/CommFontSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:textColor="@color/mpfa_error"
                android:visibility="gone" />

            <EditText
                android:id="@id/et_re_new_second_password"
                style="@style/EditTextPassword"
                android:layout_marginTop="16dp"
                android:hint="@string/re_enter_new_second_password"
                android:maxLength="30"
                android:visibility="invisible" />

            <TextView
                android:id="@id/tv_re_second_pwd_error_info"
                style="@style/CommFontSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:textColor="@color/mpfa_error"
                android:visibility="gone" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@id/ll_first_login_step2_pwds_container"
            android:layout_marginBottom="32dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:paddingBottom="32dp"
            android:orientation="vertical">

            <Button
                android:id="@id/btn_fisrt_login_step2_next"
                style="@style/Style_MPFAButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:text="@string/next" />
        </LinearLayout>

    </RelativeLayout>
</ScrollView>